--- a/SiteJogo/assets/css/login-style.css
+++ b/SiteJogo/assets/css/login-style.css
@@ -9,7 +9,7 @@
 
 .body2{
     background-color: #c9d6ff;
-    background: linear-gradient(to right, #e2e2e2, #c9d6ff);
+    background: linear-gradient(to right, #512da8, tomato);
     display: flex;
     align-items: center;
     justify-content: center;
